2001-03-29  Neal H Walfield  <neal@cs.uml.edu>

        * host.c: Fix comments.
        (ps_host_basic_info): Make INITIALIZED static; otherwise
        we never cache BUF.  Do not initalize static variables to 0.
        (ps_host_sched_info): Likewise.
        * ps.h: Doc fix.

2001-02-25  Roland McGrath  <roland@frob.com>

	* user.c: Include <string.h> for decls of built-ins.

2000-02-11  Roland McGrath  <roland@baalperazim.frob.com>

	* context.c (ps_context_find_tty_by_cttyid): Use the ttys_by_cttyid
	hash table, not the ttys hash table.

2000-01-25  Roland McGrath  <roland@baalperazim.frob.com>

	* tty.c (struct ps_tty_abbrev): Add const to member types.
	(ps_tty_abbrevs): Make const.
	(ps_tty_short_name): Clean up type usage, add consts.
	Include null terminator in calculation for short_name allocation size.
	Save lengths and use memcpy instead of using strcpy and strcat.

1999-12-22  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (HURDLIBS): Add shouldbeinlibc.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* common.h: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* common.h (VMFREE): Use munmap instead of vm_deallocate.
	* procstat.c (merge_procinfo): Likewise.

1999-06-02  Roland McGrath  <roland@baalperazim.frob.com>

	* ps.h (PSTAT_ENV): New macro.
	(struct proc_stat): New members `env', `env_len', `env_vm_alloced'.
	(proc_stat_env, proc_stat_env_len): New accessor macros.
	(PSTAT_USER_BASE): Increase value to leave more room for additions.
	* procstat.c (proc_stat_set_flags): Handle environment.
	(_proc_stat_free): Likewise.
	* spec.c (ps_get_env, ps_env_getter): New function and constant.
	(specs): New spec "Env" using ps_env_getter and ps_emit_args.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* spec.c (ps_emit_past_time, ps_emit_minutes): Fix return type of
	getter fn (int to void).

	* context.c (ps_context_free): Don't call ihash_free on PC->procs